# SAI_Faculty_Agent

./: .replit  CHANGELOG.md  main.py  pyproject.toml  replit.nix
analyze/: plan.py
api/: __init__.py  server.py
attached_assets/: Pasted--Scraping-Agent-1-Safety-Checklist-Reference-this-document-before-every-proposed-change--1754837111101_1754837111102.txt  Pasted--success-true-items-name-Earnhart-Cari-title-Departm-1754757827832_1754757827833.txt  Pasted--success-true-items-name-Earnhart-Cari-title-Departm-1754758054708_1754758054709.txt  Pasted--workspace-curl-X-POST-https-overflow-lead-agent-jarnold84-replit-app-scrape-H--1754760849921_1754760849922.txt  Pasted-from-fastapi-import-FastAPI-HTTPException-from-pydantic-import-BaseModel-HttpUrl-from-time-impor-1754756285680_1754756285681.txt
docs/: overview.md  progress.md  safety_checklist.md
extract/strategies/: directory_table.py  faculty_generic.py  json_ld.py
fetch/: http.py
fixtures/: fresno_music_success.expected.json  fresno_music_success.html
normalize/: normalize.py  profile_enricher.py
schemas/: __init__.py  error_envelope.py  normalized_lead.py
tests/: test_golden_fixtures.py  test_smoke.py
